WP2Static UPDATE comments/feed/index.html

--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,16 +7,16 @@
 	>
 <channel>
 	<title>
-	Comments for her.happyhippos	</title>
+	Comments for Stories over coffee	</title>
 	<atom:link href="http://192.168.1.111/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://emdashes.github.io/</link>
-	<description>stories over coffee</description>
+	<description>Oh, taste and see that the Lord is good! – Psalm 34:8a</description>
 	<lastBuildDate>Fri, 25 Jan 2019 02:33:17 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	<generator>https://wordpress.org/?v=5.2.2</generator>
+	<generator>https://wordpress.org/?v=5.2.3</generator>
 			<item>
 				<title>
 				Comment on Dairy, dashing hopes by Emily				</title>
