--- a/coupons/feed/index.html
+++ b/coupons/feed/index.html
@@ -10,12 +10,12 @@
 	Comments on: Coupons	</title>
 	<atom:link href="http://192.168.1.111/coupons/feed/" rel="self" type="application/rss+xml" />
 	<link>http://PLACEHOLDER.wpsho/</link>
-	<description>stories over coffee</description>
+	<description>Oh, taste and see that the Lord is good! – Psalm 34:8a</description>
 	<lastBuildDate>Sun, 29 Dec 2013 03:25:00 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	<generator>https://wordpress.org/?v=5.2.2</generator>
+	<generator>https://wordpress.org/?v=5.2.3</generator>
 </channel>
 </rss>
