--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -10,12 +10,12 @@
 	Comments on: Sample Page	</title>
 	<atom:link href="http://192.168.1.111/sample-page/feed/" rel="self" type="application/rss+xml" />
 	<link>http://PLACEHOLDER.wpsho/</link>
-	<description>stories over coffee</description>
+	<description>Oh, taste and see that the Lord is good! – Psalm 34:8a</description>
 	<lastBuildDate>Sun, 01 Sep 2019 04:51:35 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	<generator>https://wordpress.org/?v=5.2.2</generator>
+	<generator>https://wordpress.org/?v=5.2.3</generator>
 </channel>
 </rss>
